--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <!--Header - menu-->
-
+    <div class="class_header">
     <header>
         <div class="container__header">
             <div class="logo">
@@ -28,10 +28,10 @@
                 <nav>
                     <ul>
                         <li><a href="#">Inicio</a></li>
-                        <li><a href="#">Sobre</a></li>
+                        <li><a href="#">Menú</a></li>
                         <li><a href="#">Servicios</a></li>
-                        <li><a href="#">Obras</a></li>
                         <li><a href="#">Contacto</a></li>
+                        <li><a href="#">Sobre nosotros</a></li>
                     </ul>
                 </nav>
 
@@ -51,6 +51,8 @@
             </div>
         </div>
     </header>
+            
+    </div>
 
     <main>
 
@@ -85,21 +87,21 @@
         <div class="container__trust container__card-primary">
             <div class="trust card__primary">
                 <div class="text__trust text__card-primary">
-                    <p>GENERA CONFIANZA CON NOSOTROS</p>
-                    <h1>Controla tu negocio con un solo toque</h1>
+                    <p>¿Por qué Elegir Walcakes?</p>
+                    <h1>Calidad y Sabor en Cada Bocado</h1>
                 </div>
                 <div class="container__trust container__box-cardPrimary">
 
                     <div class="card__trust box__card-primary">
                         <img src="assets/images/trust area/trust01.png" alt="" height="200px" width="200px">
-                        <h2>Control empresarial completo</h2>
+                        <h2>Clientes Satisfechos</h2>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum, quos distinctio mollitia
                             minima, ducimus explicabo iste labore, voluptatem perspiciatis eos eligendi eum sapiente
                             quia. Eaque nemo ipsa fugiat esse expedita?</p>
                     </div>
                     <div class="card__trust box__card-primary">
                         <img src="assets/images/trust area/trust02.png" alt="" height="200px" width="200px">
-                        <h2>Informes y analisis critico</h2>
+                        <h2>Productos de Calidad</h2>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum, quos distinctio mollitia
                             minima, ducimus explicabo iste labore, voluptatem perspiciatis eos eligendi eum sapiente
                             quia. Eaque nemo ipsa fugiat esse expedita?</p>
@@ -107,7 +109,7 @@
 
                     <div class="card__trust box__card-primary">
                         <img src="assets/images/trust area/trust03.png" alt="" height="200px" width="200px">
-                        <h2>Satisfaccion de los clientes</h2>
+                        <h2>Al verlo no te podrás resistir</h2>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum, quos distinctio mollitia
                             minima, ducimus explicabo iste labore, voluptatem perspiciatis eos eligendi eum sapiente
                             quia. Eaque nemo ipsa fugiat esse expedita?</p>
@@ -122,11 +124,11 @@
             <div class="about">
 
                 <div class="text__about">
-                    <h1>Nuestro Equipo es el mejor</h1>
+                    <h1>Nuestro Equipo</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, numquam? Labore velit
                         accusantium magnam, facere vitae animi autem sapiente, quae doloremque inventore delectus, nam
                         fugit necessitatibus nulla. Blanditiis, maxime voluptatibus!</p>
-                    <a href="#" class="btn__text-about btn__text">Saber mas</a>
+                    <a href="#" class="btn__text-about btn__text">Conócenos</a>
                 </div>
 
                 <div class="image__about">
@@ -216,6 +218,44 @@
         </div>
 
     </main>
+
+    <footer class="footer">
+        <div class="footer_container container">
+            <div class="logo">
+                <a href="#">
+                    <img src="assets/images/logo/logoW.png" alt="">
+                </a>
+            </div>
+
+            <ul class="footer_list">
+                <li>
+                    <a href="#" class="footer_link">About</a>
+                </li>
+
+                <li>
+                    <a href="#" class="footer_link">Projects</a>
+                </li>
+
+                <li>
+                    <a href="#" class="footer_link">Testimonials</a>
+                </li>
+            </ul>
+
+            <div class="socialMedia_footer">
+                <a href="#">
+                    <img src="assets/images/social media/instagram_icon.png" alt="" width="25px">
+                </a>
+                <a href="#">
+                    <img src="assets/images/social media/tiktok_icon.png" alt="" width="25px">
+                </a>
+                <a href="#">
+                    <img src="assets/images/social media/whatsapp_logo.png" alt="" width="25px">
+                </a>
+            </div>
+
+            <span class='footer_copy'>&#169; Kayro Valero - Portfolio. All rights reserved.</span>
+        </div>
+    </footer>
 
 </body>
 
